<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/note_recycle_view"
        android:name="com.example.ov_mm.notes.NoteItemFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        tools:context=".ui.ViewNotesFragment"
        tools:listitem="@layout/item_view_note"
        android:layout_marginBottom="48dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@+id/bottom_sheet_fragment"
        app:layout_anchorGravity="top|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/bottom_sheet_fragment"
        android:layout_height="200dp"
        android:layout_width="match_parent"
        android:clickable="true"
        android:focusable="true"
        app:behavior_hideable="false"
        app:behavior_peekHeight="48dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"/>
</android.support.design.widget.CoordinatorLayout>