...
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by" />

            <Spinner
                android:id="@+id/sort_by_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:background="@android:drawable/btn_dropdown"/>

            <ToggleButton
                android:id="@+id/sort_order_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_order_toggle_button_bg"
                android:checked="true"
                android:textOff=""
                android:textOn=""/>
...
